--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 			</div>
 		</header>
 		<main class="flex-container">
-			<div class="cardContainer">place holder text</div>
+			<div class="cardContainer"><input type="text"><br /><input type="button" value="submit"></div>
 			<div id="map"></div>
 			<div class="searchContainer">Place holder text</div>
 		</main>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="index.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAiaXqZk9Y14jYBALFPyT_qjC8tAErrisg&callback=initMap"
-    async defer></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAiaXqZk9Y14jYBALFPyT_qjC8tAErrisg&callback=initMap" async defer></script>
+	
 </body>
 </html>
