started right side search bar

--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
 			</div>
 		</header>
 		<main class="flex-container">
-			<div class="cardContainer"><input type="text"><br /><input type="button" value="submit"></div>
+			<div class="cardContainer"><input type="button" value="Create Card"></div>
 			<div id="map"></div>
-			<div class="searchContainer">Place holder text</div>
+			<div class="searchContainer">
+				<form class="js-search">
+					<input type="text" class="js-query"><br />
+					<input type="submit" value="Submit">
+				</form>
+			</div>
 		</main>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="index.js"></script>
