fixed Foursquare bug and put in the left side cards

--- a/index.html
+++ b/index.html
@@ -14,13 +14,19 @@
 			</div>
 		</header>
 		<main class="flex-container">
-			<div class="cardContainer"><input type="button" value="Create Card"></div>
+			<div class="cardContainer">
+				<input type="button" value="Create Card" id="create">
+			</div>
 			<div id="map"></div>
 			<div class="searchContainer">
 				<form class="js-search">
 					<input type="text" class="js-query"><br />
 					<input type="submit" value="Submit">
 				</form>
+				<div id="results">
+					<ul>
+					</ul>
+				</div>
 			</div>
 		</main>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
