made side bars scrollable

--- a/index.html
+++ b/index.html
@@ -23,15 +23,13 @@
 					<input type="text" class="js-query"><br />
 					<input type="submit" value="Submit">
 				</form>
-				<div id="results">
-					<ul>
-					</ul>
+				<div id="js-searchResults">
 				</div>
 			</div>
 		</main>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="index.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAiaXqZk9Y14jYBALFPyT_qjC8tAErrisg&callback=initMap" async defer></script>
-	
+
 </body>
 </html>
