--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 		</header>
 		<main class="flex-container">
 			<div class="cardContainer">
-				<input type="button" value="Create Card" id="create">
+					<label for="title">Title: </label><input type="text" id="title" placeholder="Name your itinerary" ><br>
+					<input type="button" value="Create Card" id="create"><br>
+					<input type="button" value="=>" id="showFull">
 			</div>
 			<div id="map"></div>
 			<div class="searchContainer">
