--- a/index.html
+++ b/index.html
@@ -14,13 +14,20 @@
 			</div>
 		</header>
 		<main class="flex-container">
-			<div class="cardContainer">
-					<label for="title">Title: </label><input type="text" id="title" placeholder="Name your itinerary" ><br>
-					<input type="button" value="Create Card" id="create"><br>
-					<input type="button" value="=>" id="showFull">
+			<div class="sideBar">
+				<div class="cardContainer">
+						<label for="title">Title: </label><input type="text" id="title" placeholder="Name your itinerary" ><br>
+						<input type="button" value="Create Card" id="create"><br>
+						<input type="button" value="=>" id="showFull">
+				</div>
 			</div>
+      <div id="locationSearch">
+        <input id="address" type="text" placeholder="Places">
+        <input id="submitAddress" type="button" value="Search">
+      </div>
 			<div id="map"></div>
 			<div class="searchContainer">
+        <p>adding text</p>
 				<form class="js-search">
 					<input type="text" class="js-query"><br />
 					<input type="submit" value="Submit">
