--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 			</div>
 		</header>
 		<main class="flex-container">
+				<button type="button" class="showCC">Show Cards</button>
 				<div class="cardContainer">
 						<label for="title">Title: </label><input type="text" id="title" placeholder="Name your itinerary" ><br>
 						<input type="button" value="Create Card" id="create"><br>
