--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
 			</div>
 		</header>
 		<main class="flex-container">
-				<button type="button" class="showCC">Show Cards</button>
+				<input type="image" src="icons/Navigation.png" class="showCC">
 				<div class="cardContainer">
 						<label for="title">Title: </label><input type="text" id="title" placeholder="Name your itinerary" ><br>
 						<input type="button" value="Create Card" id="create"><br>
 						<input type="button" value="Show Full Screen" id="showFull">
 				</div>
       <div id="locationSearch">
-        <form>
-          <input id="address" type="text" placeholder="Places">
+        <form class="locationForm">
+          <input id="address" type="text" placeholder="Enter Address, City etc..">
           <input id="submitAddress" type="submit" value="Search">
         </form>
       </div>
 			<div id="map"></div>
 			<div class="searchContainer">
 				<form class="js-search">
-					<input type="text" class="js-query"><br />
+					<label>Places of Interest<br><input type="text" class="js-query" placeholder="Enter Keyword"></label>
 					<input type="submit" value="Submit">
 				</form>
 				<div id="js-searchResults">
