--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<input type="image" src="icons/Navigation.png" class="showCC">
 				<div class="cardContainer">
 						<label for="title">Title: </label><input type="text" id="title" placeholder="Name your itinerary" ><br>
-						<input type="button" value="Create Card" id="create"><br>
+						<input type="button" value="Create Event" id="create"><br>
 						<input type="button" value="Show Full Screen" id="showFull">
 				</div>
       <div id="locationSearch">
