--- a/index.html
+++ b/index.html
@@ -6,50 +6,55 @@
 	<link rel='stylesheet' href='index.css'>
 </head>
 <body>
-		<header class='introduction'>
-			<div class='intro-flex'>
-				<h1>Let's make an Itinerary:</h1>
-				<p> Begin by selecting a location</p>
-				<div id="initialLocationSearch">
-	        <form class="locationForm">
-	          <input id="address" type="text" placeholder="Enter Address, City etc..">
-	          <input id="initialAddress" type="submit" value="Search">
-	        </form>
-	      </div>
-			</div>
+		<header class='intro-page'>
+			<h1>Let's make an Itinerary:</h1>
+			<p> Begin by selecting a location</p>
+			<div class="initial-location-search">
+        <form class="location-form">
+          <input class="js-address" type="text" placeholder="Enter an Address, City etc.." aria-label="Enter a Location">
+          <input id="js-submit-initial-address" type="submit" value="Search">
+        </form>
+      </div>
 		</header>
-		<main class="flex-container">
+		<main>
 				<input type="image" src="icons/Navigation.png" class="showCC">
-				<div class="cardContainer">
-						<label for="title">Title: </label><input type="text" id="title" placeholder="Name your itinerary" ><br>
-						<input type="button" value="Create Event" id="create"><br>
-						<input type="button" value="Show Full Screen" id="showFull">
+				<div class="card-container">
+            <div class="card-form">
+              <label for="title">Title: </label><input type="text" id="title" placeholder="Name your itinerary" ><br>
+    					<input type="button" value="Create Event" id="create"><br>
+    					<input type="button" value="Show Full Screen" id="showFull">
+            </div>
+            <div class="cards-list"></div>
 				</div>
-      <div id="locationSearch">
-        <form class="locationForm">
-          <input id="address" type="text" placeholder="Enter Address, City etc..">
-          <input id="submitAddress" type="button" value="Search">
+      <div class="location-search">
+        <form class="location-form">
+          <input class="js-address" type="text" placeholder="Enter Address, City etc.." aria-label="Enter a Location">
+          <input id="submit-address" type="button" value="Search">
         </form>
       </div>
 			<div id="map"></div>
-			<div class="searchContainer">
+			<div class="search-container">
 				<form class="js-search">
 					<label>Places of Interest<br><input type="text" class="js-query" placeholder="Enter Keyword"></label>
 					<input type="submit" value="Submit">
 				</form>
-				<div id="js-searchResults">
+				<div id="js-search-results">
 				</div>
 			</div>
 		</main>
-    <div id="styledItinerary">
-      <div class="itinTitle">
+    <div class="styled-itinerary">
+      <div class="itin-title">
       </div>
       <div class="events">
       </div>
-      <button class="hideStyled" type="button">Close</button>
+      <button id="js-hide-styled" type="button">Close</button>
     </div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="index.js"></script>
+  <script type="text/javascript" src="js/google-maps-api.js"></script>
+  <script type="text/javascript" src="js/places-search.js"></script>
+  <script type="text/javascript" src="js/search-address.js"></script>
+  <script type="text/javascript" src="js/card-container.js"></script>
+	<script type="text/javascript" src="index.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAiaXqZk9Y14jYBALFPyT_qjC8tAErrisg&callback=initMap&libraries=places" async defer></script>
 
 </body>
