Added show details functionality

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<label>Places of Interest<br><input type="text" class="js-query" placeholder="Enter Keyword"></label>
 					<input type="submit" value="Submit">
 				</form>
-				<div id="js-search-results">
+				<div class="js-search-results">
 				</div>
 			</div>
 		</main>
