Added the ability to keep markers

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 				<input type="image" src="icons/Navigation.png" class="showCC">
 				<div class="card-container">
             <div class="card-form">
-              <label for="title">Title: </label><input type="text" id="title" placeholder="Name your itinerary" ><br>
     					<input type="button" value="Create Event" id="create"><br>
-    					<input type="button" value="Show Full Screen" id="showFull">
+    					<input type="button" value="Show Full Screen" id="showFull"><br>
+              <label for="title">Title: </label><input type="text" id="title" placeholder="Name your itinerary" >
             </div>
             <div class="cards-list"></div>
 				</div>
@@ -47,7 +47,9 @@
       </div>
       <div class="events">
       </div>
-      <button id="js-hide-styled" type="button">Close</button>
+      <div class="footer"
+        <button id="js-hide-styled" type="button">Close</button>
+      </div>
     </div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/google-maps-api.js"></script>
