--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<p> Begin by selecting a location</p>
 			<div class="initial-location-search">
         <form class="location-form">
-          <input class="js-address" type="text" placeholder="Enter an Address, City etc.." aria-label="Enter a Location">
+          <input id="initial-address" type="text" placeholder="Enter an Address, City etc.." aria-label="Enter a Location">
           <input id="js-submit-initial-address" type="submit" value="Search">
         </form>
       </div>
@@ -24,7 +24,7 @@
     					<input type="button" value="Show Full Screen" id="showFull"><br>
               <label for="title">Title: </label><input type="text" id="title" placeholder="Name your itinerary" >
             </div>
-            <div class="cards-list"></div>
+            <div class="cards-list" aria-live="assertive"></div>
 				</div>
       <div class="location-search">
         <form class="location-form">
@@ -38,7 +38,7 @@
 					<label>Places of Interest<br><input type="text" class="js-query" placeholder="Enter Keyword"></label>
 					<input type="submit" value="Submit">
 				</form>
-				<div class="js-search-results">
+				<div class="js-search-results" aria-live="assertive">
 				</div>
 			</div>
 		</main>
