Added some styles

--- a/index.html
+++ b/index.html
@@ -4,18 +4,21 @@
 	<meta name ="viewport" content="width=device-width, initial-scale=1">
 	<title>MyItinerary</title>
 	<link rel='stylesheet' href='index.css'>
+	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
 </head>
 <body>
-		<header class='intro-page'>
-			<h1>Let's make an Itinerary:</h1>
-			<p> Begin by selecting a location</p>
-			<div class="initial-location-search">
-        <form class="location-form">
-          <input id="initial-address" type="text" placeholder="Enter an Address, City etc.." aria-label="Enter a Location">
-          <input id="js-submit-initial-address" type="submit" value="Search">
-        </form>
-      </div>
-		</header>
+		<div class='intro-page'>
+			<div class='description-container'>
+				<h1>Let's make an Itinerary:</h1>
+				<p> Begin by selecting a location</p>
+				<div class="initial-location-search">
+	        <form class="location-form">
+	          <input id="initial-address" type="text" placeholder="Enter an Address, City etc.." aria-label="Enter a Location">
+	          <input id="js-submit-initial-address" type="submit" value="Search">
+	        </form>
+	      </div>
+			</div>
+		</div>
 		<main>
 				<input type="image" src="icons/Navigation.png" class="showCC">
 				<div class="card-container">
