changed some css

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
 	<title>MyItinerary</title>
 	<link rel='stylesheet' href='index.css'>
 	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Kalam" rel="stylesheet">
 </head>
 <body>
 		<div class='intro-page'>
 			<div class='description-container'>
 				<h1>Let's make an Itinerary:</h1>
-				<p> Begin by selecting a location</p>
+				<p> Begin by choosing and area to search:</p>
 				<div class="initial-location-search">
 	        <form class="location-form">
 	          <input id="initial-address" type="text" placeholder="Enter an Address, City etc.." aria-label="Enter a Location">
