--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<input type="image" src="icons/Navigation.png" class="showCC">
 				<div class="card-container">
             <div class="card-form">
-    					<input type="button" value="Create Event" id="create"><br>
+    					<input type="button" value="Create A Destination" id="create"><br>
     					<input type="button" value="Show Full Screen" id="showFull"><br>
               <label for="title">Title: </label><input type="text" id="title" placeholder="Name your itinerary" >
             </div>
