--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<input type="image" src="icons/Navigation.png" class="showCC">
 				<div class="card-container">
             <div class="card-form">
-    					<input type="button" value="Create New Destination" id="create"><br>
+    					<input type="button" value="Create Destination" id="create"><br>
     					<input type="button" value="Printable Version" id="showFull"><br>
             </div>
 						<label for="title">Title: </label><input type="text" id="title" placeholder="Name your itinerary" >
