--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
 		</div>
 		<main>
 				<input type="image" src="icons/Navigation.png" class="showCC">
-				<div class="card-container">
-            <div class="card-form">
-    					<input type="button" value="Create Destination" id="create"><br>
-    					<input type="button" value="Printable Version" id="showFull"><br>
-            </div>
-						<label for="title">Title: </label><input type="text" id="title" placeholder="Name your itinerary" >
+        <div class="card-form">
+          <input type="button" value="Create Destination" id="create"><br>
+          <input type="button" value="Printable Version" id="showFull"><br>
+          <label for="title">Title: </label><input type="text" id="title" placeholder="Name your itinerary" >
+        </div>
+        <div class="card-container">
             <div class="cards-list" aria-live="assertive"></div>
 				</div>
       <div class="location-search">
         <form class="location-form">
           <input class="js-address" type="text" placeholder="Enter Address, City etc.." aria-label="Enter a Location">
-          <input id="submit-address" type="button" value="Search">
+          <input id="submit-address" type="submit" value="Search">
         </form>
       </div>
 			<div id="map"></div>
