fixed close button

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 				<div class="white-space"></div>
 			</div>
 		</div>
-		<main>
-				<input type="image" src="icons/Navigation.png" class="showCC">
+		<main role='main'>
+				<input type="image" src="icons/Navigation.png" class="showCC" alt="Show Places Search">
         <div class="card-form">
           <input type="button" value="Create Destination" id="create"><br>
           <input type="button" value="Printable Version" id="showFull"><br>
@@ -52,8 +52,8 @@
       </div>
       <div class="events">
       </div>
-      <div class="footer"
-        <button id="js-hide-styled" type="button">Close</button>
+      <div class="footer">
+        <input id="js-hide-styled" type="button" value="Close">
       </div>
     </div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
