fixed initial placeholder

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<p class="headerSubText"> Begin by entering a city to search in:</p>
 				<div class="initial-location-search">
 	        <form class="location-form">
-	          <input id="initial-address" type="text" placeholder="Enter an Address, City etc.." aria-label="Enter a Location">
+	          <input id="initial-address" type="text" placeholder="Enter a City" aria-label="Enter a Location">
 	          <input id="js-submit-initial-address" type="submit" value="Search">
 	        </form>
 	      </div>
