--- a/index.html
+++ b/index.html
@@ -9,16 +9,19 @@
 </head>
 <body>
     <div class='intro-page'>
-      <div class='description-container'>
-        <h1 class="header">Let's make an Itinerary!</h1>
-        <p class="headerSubText"> Begin by entering a city to search in:</p>
-        <div class="initial-location-search">
-          <form class="location-form">
-            <input id="initial-address" type="text" placeholder="Enter a City" aria-label="Enter a Location">
-            <input id="js-submit-initial-address" type="submit" value="Search">
-          </form>
+      <div class="container">
+        <div class="col-10">
+          <div class="jumbotron">
+            <h1 class="header">Let's make an Itinerary!</h1>
+            <p class="headerSubText"> Begin by entering a city to search in:</p>
+            <div class="initial-location-search">
+              <form class="location-form">
+                <input id="initial-address" type="text" placeholder="Enter a City" aria-label="Enter a Location">
+                <input id="js-submit-initial-address" type="submit" value="Search">
+              </form>
+            </div>
+          </div>
         </div>
-        <div class="white-space"></div>
       </div>
     </div>
     <main role='main'>
