--- a/index.html
+++ b/index.html
@@ -4,54 +4,70 @@
   <meta name ="viewport" content="width=device-width, initial-scale=1">
   <title>MyItinerary</title>
   <link rel='stylesheet' href='index.css'>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Kalam" rel="stylesheet">
 </head>
 <body>
-    <div class='intro-page'>
-      <div class="container">
-        <div class="col-10">
-          <div class="jumbotron">
-            <h1 class="header">Let's make an Itinerary!</h1>
-            <p class="headerSubText"> Begin by entering a city to search in:</p>
-            <div class="initial-location-search">
-              <form class="location-form">
-                <input id="initial-address" type="text" placeholder="Enter a City" aria-label="Enter a Location">
-                <input id="js-submit-initial-address" type="submit" value="Search">
-              </form>
-            </div>
+    <div class="intro-page">
+      <div class="container-fluid d-flex justify-content-center">
+        <div class="row no-gutters">
+          <div class="col-10">
+            <div class="jumbotron shadow-lg text-white">
+              <p class="header mt-0">Welcome to myItinerary!</h1>
+              <p class="headerSubText"> myIntinery allows you to search for locations and then add them to a printable Itinerary!</p>
+              <ol class="instructions">
+                <li>Begin by entering a city below</li>
+                <li>Create a title for your itinerary</li>
+                <li>Use the green button to create a destination</li>
+                <li>Then enter a keyword to search</li>
+                <li>Choose your destination by clicking on the "Add Destination" button</li>
+                <li>Let's begin!</li>
+              </ol>
+              <div class="initial-location-search">
+                <form class="location-form">
+                  <input id="initial-address"  type="text" placeholder="Enter a City" aria-label="Enter a Location">
+                  <input id="js-submit-initial-address" class="btn btn-primary" type="submit" value="Search">
+                </form>
+              </div>
+            </div> <!-- .jumbotron -->
+          </div> <!-- .col -->
+        </div> <!-- .row -->
+      </div> <!-- .container-fluid -->
+    </div> <!-- .intro-page -->
+    <main role="main" class="main" aria-live="assertive">
+      <input type="image" src="icons/loupe.png" class="showCC btn-primary" aria-label="Places Search Button" alt="Show Places Search button">
+      <div class="container-fluid">
+        <div class="row no-gutters d-flex flex-row-reverse">
+          <div class="col-12 col-xl-8">
+            <div id="map" class="map"></div>
           </div>
-        </div>
-      </div>
-    </div>
-    <main role='main'>
-        <input type="image" src="icons/Navigation.png" class="showCC" alt="Show Places Search">
-        <div class="card-form">
-          <input type="button" value="Create Destination" id="create"><br>
-          <input type="button" value="Printable Version" id="showFull"><br>
-        </div>
-        <div class="card-container">
-            <label for="title">Title: </label><input type="text" id="title" placeholder="Name your itinerary" >
-            <div class="cards-list" aria-live="assertive"></div>
-        </div>
+          <div class="col-lg-4 col-12">
+            <div class="card-bar">
+              <section role="application">
+                <div class="card-form">
+                  <fieldset>
+                    <legend class="cd">Create Destination</legend>
+                    <input type="button" value="Create Destination" id="create" class="create"><br>
+                    <input type="button" value="Printable Version" id="showFull"><br>
+                    <label for="title">Title: </label> <input type="text" id="title" placeholder="Name your itinerary" >
+                  </fieldset>
+                </section>
+              </div>
+              <div class="card-c">
+                <section role="log" class="cards-list" aria-live="assertive"></section>
+              </div>
+            </div> <!-- card-bar -->
+          </div><!-- col-lg-4 col-12 -->
+        </div><!-- .row -->
+      </div> <!-- .container-fluid -->
       <div class="location-search">
         <form class="location-form">
-          <input class="js-address" type="text" placeholder="Enter Address, City etc.." aria-label="Enter a Location">
-          <input id="submit-address" type="submit" value="Search">
+          <fieldset>
+            <input class="js-address" type="text" placeholder="Enter Address, City etc.." aria-label="Enter a Location">
+            <input id="submit-address" type="submit" value="Search">
+          </fieldset>
         </form>
-      </div>
-      <div id="map"></div>
-      <div class="search-container">
-        <form class="js-search">
-          <label>Places of Interest<br><input type="text" class="js-query" placeholder="Enter Keyword"></label>
-          <input type="submit" value="Submit">
-        </form>
-        <p><strong>*Please note:</strong> If you are trying to enter a geographical location (e.g. chicago, china, etc...)
-          or an ethnicity (e.g. chinese, indian, etc...) as a keyword you must also include another word to identify the type
-          of place that you would like to search. e.g. "chinese <em>food</em>" or "japanese <em>temple</em>"
-        </p>
-        <div class="js-search-results" aria-live="assertive">
-        </div>
       </div>
     </main>
     <div class="styled-itinerary">
@@ -59,11 +75,38 @@
       </div>
       <div class="events">
       </div>
-      <div class="footer">
-        <input id="js-hide-styled" type="button" value="Close">
-      </div>
+      <footer class="footer">
+        <input id="js-hide-styled" class="hide-styled" type="button" value="Close">
+      </footer>
     </div>
+    <section class="search-wrapper" role="application">
+      <div class="container-fluid">
+        <div class="row no-gutters">
+          <div class="col-lg-4 col-12">
+            <div class="search-c">
+              <section role="application">
+                <form class="js-search">
+                  <fieldset>
+                    <legend> Places of Interest: </legend>
+                    <input type="text" class="js-query" placeholder="Enter Keyword" aria-label="Enter Search Keyword">
+                    <input type="submit" value="Submit">
+                  </fieldset>
+                </form>
+              </section>
+              <p>
+                <strong>*Please note:</strong> If you are trying to enter a geographical location (e.g. chicago, china, etc...)
+                or an ethnicity (e.g. chinese, indian, etc...) as a keyword you must also include another word to identify the type
+                of place that you would like to search. e.g. "chinese <em>food</em>" or "japanese <em>temple</em>"
+              </p>
+              <section role="log" class="js-search-results" aria-live="assertive"></section>
+            </div><!-- .search-c -->
+          </div><!-- .col-lg-4 -->
+        </div><!-- .row no-pad -->
+      </div><!-- .container-fluid -->
+    </section><!-- .search-wrapper -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
   <script type="text/javascript" src="js/google-maps-api.js"></script>
   <script type="text/javascript" src="js/places-search.js"></script>
   <script type="text/javascript" src="js/search-address.js"></script>
